Alteracoes-Criacao do fluxo do vendedor.
